# campidoglio

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build_tests.ps1
campidoglio/: CMakeLists.txt
campidoglio/C/: CMakeLists.txt
campidoglio/C/Campidoglio/include/private/Campidoglio/: CampidoglioPrivate.hpp
campidoglio/C/Campidoglio/include/public/Campidoglio/: Campidoglio.hpp
campidoglio/C/Campidoglio/src/private/: CampidoglioPrivate.cpp
campidoglio/C/DataType/: gen.py
campidoglio/C/DataType/DataType/src/public/: DataType.cpp
campidoglio/C/DataType/DataTypeBool/src/public/: DataTypeBool.cpp
campidoglio/C/DataType/DataTypeChar/src/public/: DataTypeChar.cpp
campidoglio/C/DataType/DataTypeDouble/src/public/: DataTypeDouble.cpp
campidoglio/C/DataType/DataTypeFloat/src/public/: DataTypeFloat.cpp
campidoglio/C/DataType/DataTypeInt/src/public/: DataTypeInt.cpp
campidoglio/C/DataType/DataTypeLong/src/public/: DataTypeLong.cpp
campidoglio/C/DataType/DataTypeLongDouble/src/public/: DataTypeLongDouble.cpp
campidoglio/C/DataType/DataTypeLongInt/src/public/: DataTypeLongInt.cpp
campidoglio/C/DataType/DataTypeLongLong/src/public/: DataTypeLongLong.cpp
campidoglio/C/DataType/DataTypeLongLongInt/src/public/: DataTypeLongLongInt.cpp
campidoglio/C/DataType/DataTypeShort/src/public/: DataTypeShort.cpp
campidoglio/C/DataType/DataTypeShortInt/src/public/: DataTypeShortInt.cpp
campidoglio/C/DataType/DataTypeSigned/src/public/: DataTypeSigned.cpp
campidoglio/C/DataType/DataTypeSignedChar/src/public/: DataTypeSignedChar.cpp
campidoglio/C/DataType/DataTypeSignedInt/src/public/: DataTypeSignedInt.cpp
campidoglio/C/DataType/DataTypeSignedLong/src/public/: DataTypeSignedLong.cpp
campidoglio/C/DataType/DataTypeSignedLongInt/src/public/: DataTypeSignedLongInt.cpp
campidoglio/C/DataType/DataTypeSignedLongLong/src/public/: DataTypeSignedLongLong.cpp
campidoglio/C/DataType/DataTypeSignedLongLongInt/src/public/: DataTypeSignedLongLongInt.cpp
campidoglio/C/DataType/DataTypeSignedShort/src/public/: DataTypeSignedShort.cpp
campidoglio/C/DataType/DataTypeSignedShortInt/src/public/: DataTypeSignedShortInt.cpp
campidoglio/C/DataType/DataTypeUnsigned/src/public/: DataTypeUnsigned.cpp
campidoglio/C/DataType/DataTypeUnsignedChar/src/public/: DataTypeUnsignedChar.cpp
campidoglio/C/DataType/DataTypeUnsignedInt/src/public/: DataTypeUnsignedInt.cpp
campidoglio/C/DataType/DataTypeUnsignedLong/src/public/: DataTypeUnsignedLong.cpp
campidoglio/C/DataType/DataTypeUnsignedLongInt/src/public/: DataTypeUnsignedLongInt.cpp
campidoglio/C/DataType/DataTypeUnsignedLongLong/src/public/: DataTypeUnsignedLongLong.cpp
campidoglio/C/DataType/DataTypeUnsignedLongLongInt/src/public/: DataTypeUnsignedLongLongInt.cpp
campidoglio/C/DataType/DataTypeUnsignedShort/src/public/: DataTypeUnsignedShort.cpp
campidoglio/C/DataType/DataTypeUnsignedShortInt/src/public/: DataTypeUnsignedShortInt.cpp
campidoglio/C/File/File/src/public/: File.cpp
campidoglio/C/File/FileHeader/src/public/: FileHeader.cpp
campidoglio/C/Message/Message/src/: Message.cpp
(+70 files in other folders)
